# NAMP

libplatune/player-gstreamer/: Cargo.toml
libplatune/player-gstreamer/src/: lib.rs
libplatune/player-gstreamer/src/actors/: decoder.rs  gstreamer_context.rs  mod.rs  player.rs  queue_loop.rs  request_handler.rs  song_queue.rs  terminate.rs
libplatune/player-gstreamer/tests/: test.rs
player/src/: dummy_player.rs  gstreamer_player_backend.rs  main.rs  player_actor.rs  player_backend.rs  song_start_actor.rs  state_changed_actor.rs
