[package]
authors = ["aschey <aschey13@gmail.com>"]
edition = "2018"
name = "libplatune-player-gstreamer"
version = "0.1.0"

[lib]
name = "libplatune_player_gstreamer"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["runtime-tokio"]
runtime-async-std = ["act-zero/default-async-std", "async-std"]
runtime-tokio = ["act-zero/default-tokio", "tokio"]

[dependencies]
act-zero = {version = "0.4.0"}
async-std = {version = "1.9.0", optional = true}
async-trait = "0.1.48"
bus = "2.2.3"
futures = "0.3.13"
gstreamer = "0.16"
gstreamer-audio = "0.16"
lazy_static = "1.4.0"
log = "0.4.14"
postage = "0.4.1"
rustfft = "5.0.1"
serde_json = "1.0.64"
servo-media = {path = "../../../servo-media-fork/servo-media"}
servo-media-audio = {path = "../../../servo-media-fork/audio"}
servo-media-auto = {path = "../../../servo-media-fork/backends/auto"}
strum_macros = "0.20.1"
tokio = {version = "1.2.0", features = ["full"], optional = true}

[dev-dependencies]
assert_matches = "1.5.0"
ctor = "0.1.19"
flexi_logger = "0.17.1"
rstest = "0.6.4"
yansi = "0.5.0"
